scrapping old script.js and starting over to better understanding of code (also I didn't follow the instructor demo like a dingus)

--- a/assets/style.css
+++ b/assets/style.css
@@ -2,8 +2,9 @@ body {
     background-color: aquamarine;
 }
 
-.custom-fill {
+header, .btn {
     background-color: navy;
+    color: white;
 }
 
 footer {
